# contentful-rust

./: Cargo.toml  README.md  test.http
src/: delivery_client.rs  lib.rs  model.rs
tests/: contentful_test.rs
